add first three days

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Anna Berger <anna.ig.berger@gmail.com>"]
 python = "^3.8"
 
 [tool.poetry.dev-dependencies]
+black = "^22.10.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
