--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,13 +3,16 @@ name = "aoc-2022"
 version = "0.1.0"
 description = ""
 authors = ["Anna Berger <anna.ig.berger@gmail.com>"]
+readme = "README.md"
+packages = [{include = "aoc_2022"}]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.11"
 
-[tool.poetry.dev-dependencies]
+
+[tool.poetry.group.dev.dependencies]
 black = "^22.10.0"
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
+requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
